--- a/src/ui-views/stops.html
+++ b/src/ui-views/stops.html
@@ -2,7 +2,7 @@
 
 <section class="behaviorSections">
   <center>Stops</center>
-  Choose Stops Date: <input placeholder="Choose a date" type="date" ng-model="theDate" ng-change="getStopTime()" />
+  Choose Stops Date: <input placeholder="Choose a date" type="date" ng-model="theDate" ng-change="dateFilter()" />
 
 
 
