add custom marker

--- a/src/ui-views/userHome.html
+++ b/src/ui-views/userHome.html
@@ -80,17 +80,13 @@
     <marker ng-repeat="location in currentLocations track by $index" position="{{location}}" icon="./map-marker.png" ></marker>
 
 
-    <custom-marker class="vehicle-info-marker"position="{{choiceCenter}}" ng-if="choiceOn">
+    <custom-marker class="vehicle-info-marker"position="{{location}}">
 
       <div class="marker-cont">
 
         <div class="marker-desc">
-          <p>{{choiceInfo.address}}</p><br>
-          <p>{{theTime}}</p><br>
-          <p>Speed: {{choiceInfo.speed}} MPH </p><br>
-          <p>
-            Heading:{{choiceHeading}}
-          </p>
+          <p>{{vehicle.name}}</p>
+
         </div>
 
 
