--- a/src/ui-views/vehicleInfo.html
+++ b/src/ui-views/vehicleInfo.html
@@ -20,18 +20,19 @@
 
   <section class="vehicle-tabs">
 
-  <div ui-sref="userHome.vehicleInfo.location" ng-click="setTab(1)" ng-class="{active: isSet(1) }">
+  <div class="tab" ui-sref="userHome.vehicleInfo.location" ng-click="setTab(1)" ng-class="{active: isSet(1) }">
     <p ng-click="goToLocation()">
       Locations
     </p>
   </div>
 
-  <div  ng-click="setTab(2)" ng-class="{active: isSet(2)}">
+  <div class="tab" ng-click="setTab(2)" ng-class="{active: isSet(2)}">
 <p ng-click="goToBehaviors()">
   Behaviors
 </p>
   </div>
 </section>
+
 </section>
 
   <ui-view>
