--- a/src/ui-views/welcome.html
+++ b/src/ui-views/welcome.html
@@ -8,13 +8,13 @@
 
         <section class="welcome-content">
 
-            <h1>Never worry again about your vehicles</h1>
+            <h1>Vehicle Tracking made Easy</h1>
 
             <div class="title-bar">
 
             </div>
 
-            <h3>We sucessfully tracked Brett.</h3>
+            <h3>Simply, Accurate, and Effective</h3>
             <div class="welcome-button-container">
                 <button type="button" name="button" ng-click ='signupModal()'>Signup Now</button>
             </div>
