--- a/src/ui-views/acceleration.html
+++ b/src/ui-views/acceleration.html
@@ -1,5 +1,36 @@
 <section class="behaviorSections">
-  <center>Fast Acceleration</center>
-  <center><button type="button" name="button" ng-click="back()">Back</button></center>
+<div class="">
+  <center>Harsh Accelertaion</center>
+  <datepicker date-format='EEE MMMM d y' selector="form-control">
+
+  <div class="input-group">
+
+     <input class="form-control" placeholder="Choose a date" ng-model="theDate" ng-change="dateFilter()" /><br>
+
+                <span class="input-group-addon" style="cursor: pointer">
+
+     <i class="fa fa-lg fa-calendar"></i>
+     </span>
+  </datepicker>
+</div>
+
+
+
+
+
+
+
+
+     <ol ng-repeat="acc in accs">
+       <li>Address: {{acc.address}}<br>
+         Time: {{acc.fixTime | date: 'shortTime'}}<br>
+         
+         <!-- Time at Stop: <b ng-show="showTime">{{stop.stopTime | date: 'h:mm:ss'}}</b> -->
+         <!-- <b ng-show="stillThere">Still at this location</b> -->
+       </li>
+     </l>
+
+
 
 </section>
+<center><button type="button" name="button" ng-click="back()">Back</button></center>
