add function to behaviors

--- a/src/ui-views/acceleration.html
+++ b/src/ui-views/acceleration.html
@@ -1,6 +1,6 @@
 <section class="behaviorSections">
 <div class="">
-  <center>Harsh Accelertaion</center>
+  <center>Fast Accelertaion</center>
   <datepicker date-format='EEE MMMM d y' selector="form-control">
 
   <div class="input-group">
@@ -24,7 +24,7 @@
      <ol ng-repeat="acc in accs">
        <li>Address: {{acc.address}}<br>
          Time: {{acc.fixTime | date: 'shortTime'}}<br>
-         
+
          <!-- Time at Stop: <b ng-show="showTime">{{stop.stopTime | date: 'h:mm:ss'}}</b> -->
          <!-- <b ng-show="stillThere">Still at this location</b> -->
        </li>
