add click functionality to userhome

--- a/src/ui-views/userHome.html
+++ b/src/ui-views/userHome.html
@@ -77,11 +77,39 @@
   </section>
 
   <ng-map zoom="11" center="[40.74, -74.18]" zoom-to-include-markers="auto" >
-    <marker ng-repeat="location in currentLocations track by $index" position="{{location}}" icon="./map-marker.png" ></marker>
+    <marker ng-repeat="location in currentLocations track by $index" position="{{location}}" on-click="showDesc(event, $index, pin, dayLocations)" icon="./map-marker.png" ></marker>
 
 
-    
+    <custom-marker class="vehicle-info-marker"position="{{choiceCenter}}" ng-if="choiceOn">
 
+      <div class="marker-cont">
+
+        <div class="marker-desc">
+          <p>{{vehicleArr[$index]}}</p><br>
+        </div>
+
+
+        <div class="marker-tri">
+
+        </div>
+
+
+      </div>
+
+    </custom-marker>
+
+    <shape name="polyline"
+      path='{{pins}}'
+      geodesic="true"
+      stroke-color="#4ca64c"
+      stroke-opacity="1.0"
+      stroke-weight="2">
+    </shape>
+    </ng-map>
+
+
+
+    </section>
 
 
   </ng-map>
