--- a/src/ui-views/welcomeCalender.html
+++ b/src/ui-views/welcomeCalender.html
@@ -1,10 +1,9 @@
 <div class="driving-content-header">
 
-  <h3>Daily Timeline</h3>
+  <h3>Engine Codes & Diagnostics</h3>
   <div class="title-bar">
   </div>
 
 </div>
 <p>
-His no nominavi invidunt, sit agam urbanitas ad. Dolore abhorreant id per, usu te nonumes consequuntur necessitatibus. Pro idque meliore ne. Te paulo prompta quo, vim illud labitur ad, errem ornatus nec ad. Pro ei debet utroque, an veritus sapientem vix.
-</p>
+Receive notifications when check engine light turns on. Know what the code could mean as well as what the price should be to fix it. Receive recommendations on where to take vehicle based on customer ratings.</p>
