--- a/src/ui-views/welcomeClock.html
+++ b/src/ui-views/welcomeClock.html
@@ -1,11 +1,11 @@
 <div class="driving-content-header">
 
-  <h3>Time Management</h3>
+  <h3>Daily Timeline</h3>
   <div class="title-bar">
   </div>
 
 </div>
 
 <p>
-Te propriae reprehendunt ius, eu dolorum lucilius persequeris vel, homero iudicabit ei nec. Vis assum minim cu. Consul graece nominati te vis, eam te dicta epicurei definitiones. Idque legimus tincidunt vix ea. His ne maiorum reformidans, conceptam cotidieque usu ex.
+See travel path of any given day or time. Ability to click on marker and receive address, time, heading, and speed of marker clicked. 
 </p>
