--- a/src/ui-views/welcomeGlobe.html
+++ b/src/ui-views/welcomeGlobe.html
@@ -1,11 +1,13 @@
 <div class="driving-content-header">
 
-  <h3>Global Services</h3>
+  <h3>GPS Location & Tracking</h3>
   <div class="title-bar">
   </div>
 
 </div>
 
 <p>
-Duo facilis reprehendunt ad, id quas audiam eum. Ex has affert mentitum omittantur. Ut dicunt cotidieque pri, ne tempor diceret oportere has. Id numquam explicari eum. Ut maiorum volutpat sed. At voluptua expetenda usu, sea minimum assueverit ei.
+Know where your vehicles are at any time in real time. See a marked path of the day's
+ travel. Click on markers to see information at a certain location including time, address,
+ heading, and speed. Find exact location during a specific time period by filtering by day and time.
 </p>
