--- a/src/ui-views/welcomeMarker.html
+++ b/src/ui-views/welcomeMarker.html
@@ -1,6 +1,6 @@
 <div class="driving-content-header">
 
-  <h3>GPS Location</h3>
+  <h3>Speeding Alerts</h3>
   <div class="title-bar">
   </div>
 
@@ -8,5 +8,5 @@
 
 
 <p>
-  Fuisset platonem sea ad, putent aliquam fierent et cum, zril diceret similique eos no. In saepe graeco ocurreret eum, ex eam impetus conceptam. Cu fabellas reprehendunt concludaturque qui, an vix impetus labitur, ne cum sonet veritus. Elitr quodsi suavitate no mei, id eos stet adipiscing. Aliquid equidem sapientem et has, duo ea appareat periculis. Quidam eleifend ocurreret usu ei.
+  Know when your vehicles are speeding, how fast they are going, where the violation accured, and the frequency of occurence. Cutdown on costs by promoting economical speeds and avoiding traffic citations.
 </p>
