--- a/src/ui-views/welcomeSpeed.html
+++ b/src/ui-views/welcomeSpeed.html
@@ -1,11 +1,10 @@
 <div class="driving-content-header">
 
-  <h3>Speed Limit Notifications</h3>
+  <h3>Maintenance Notifications</h3>
   <div class="title-bar">
   </div>
 
 </div>
 <p>
-
-  In nec civibus maluisset repudiare, doming efficiendi sea ne. Ex vel veniam verterem erroribus, cu solet oportere nec. Mei ad vivendum accusamus assentior, est te habeo nusquam qualisque. Vix veritus dissentiet te, ius dicit praesent eu. Viris alienum ei cum, animal diceret cu eos. Te sed appareat rationibus, ei simul vocibus usu, graeci vidisse molestie no nam.
+Receive comprehensive information about you specific vehicle surrounding maintenance guidelines, owner's manuals, and much more.
 </p>
