--- a/src/ui-views/welcomeTruck.html
+++ b/src/ui-views/welcomeTruck.html
@@ -1,11 +1,25 @@
 <div class="driving-content-header">
 
-  <h3>Vehicle Tracking</h3>
+  <h3>Multiple Driving Behaviors</h3>
   <div class="title-bar">
   </div>
 
 </div>
 
 <p>
-   3 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+Track multiple driving behaviors such as <br>
+
+- Fast Accelertion <br>
+
+- Harsh Turning <br>
+- Harsh Braking <br>
+- Vehicle Stops <br>
+- Speeding <br>
+- Mileage Information <br>
+- Vehicle Idling <br>
+- Registration Information <br>
+- Maintenance Schedule <br>
+- Diagnostics <br>
+- Low Vehicle Battery <br>
+- Inspections <br>
 </p>
