fixed a bug with closing tags in userHome.html

--- a/src/ui-views/userHome.html
+++ b/src/ui-views/userHome.html
@@ -85,7 +85,7 @@
       <div class="marker-cont">
 
         <div class="marker-desc">
-          <p>{{vehicleArr[$index]}}</p><br>
+          <p>{{vehicleArr[$index].name}}</p><br>
         </div>
 
 
@@ -110,15 +110,5 @@
 
 
     </section>
-
-
-  </ng-map>
-
-</section>
-
-
-
-
-
 
 </section>
