--- a/src/ui-views/welcome.html
+++ b/src/ui-views/welcome.html
@@ -1,3 +1,6 @@
+<section ng-hide="loadHidden" class="authenticating">
+
+
 <modal-dir></modal-dir>
 
 <section class="welcome-background">
@@ -71,7 +74,7 @@
 <section class='welcome-driving'>
 
     <div class = "driving-content-view">
-      
+
         <ui-view></ui-view>
 
     </div>
@@ -175,7 +178,7 @@
 
   <footer-dir></footer-dir>
 
-
+</section>
 
 
 
