add load screen

--- a/src/ui-views/directiveTmpls/headerTmpl.html
+++ b/src/ui-views/directiveTmpls/headerTmpl.html
@@ -1,14 +1,14 @@
 <section class="welcome-header">
 
 
-    <div class="logo-cont">
+    <div ng-hide="logoHidden" class="logo-cont">
 
-        <section ui-sref = "welcome" class="logo">
+        <section  ui-sref = "welcome" class="logo">
 
         </section>
 
     </div>
-    
+
 
 
     <section class="welcome-menu">
