--- a/src/ui-views/welcome.html
+++ b/src/ui-views/welcome.html
@@ -1,6 +1,14 @@
+
 <modal-dir></modal-dir>
 
 <section class="welcome-background">
+
+    <div ng-hide="loadHidden" class="loading">
+      <div class="img">
+    <span>Authenticating</span>
+
+      </div>
+    </div>
 
     <header-dir></header-dir>
 
