--- a/src/ui-views/userHome.html
+++ b/src/ui-views/userHome.html
@@ -1,5 +1,12 @@
 <modal-dir></modal-dir>
 
+<section ng-hide="loadingHidden" class="loadingSection">
+  <div class="img">
+    <span>Loading Vehicle Data</span>
+  </div>
+</section>
+
+
 <section class="user-home-main">
 
 <section class="main-side-menu">
