add another load

--- a/src/ui-views/directiveTmpls/modalTmpl.html
+++ b/src/ui-views/directiveTmpls/modalTmpl.html
@@ -3,6 +3,11 @@
 
 
     <section class="wide-modal-box">
+      <section ng-hide="loadingHiddenVehicle" class="loadingSectionVehicle">
+        <div class="img">
+          <span>Loading Vehicle Data</span>
+        </div>
+      </section>
 
         <section class="modal-nav">
 
