--- a/src/ui-views/directiveTmpls/modalTmpl.html
+++ b/src/ui-views/directiveTmpls/modalTmpl.html
@@ -3,7 +3,7 @@
 
 
     <section class="wide-modal-box">
-      <section ng-hide="loadingHiddenVehicle" class="loadingSectionVehicle">
+      <section ng-hide="loadingHiddenOneVehicle" class="loadingSectionVehicle">
         <div class="img">
           <span>Loading Vehicle Data</span>
         </div>
